updated to python

--- a/P3_Mojo/data/logistic_regression/CPP/Makefile
+++ b/P3_Mojo/data/logistic_regression/CPP/Makefile
@@ -5,7 +5,7 @@ clean:
 
 build: clean
 	mkdir out
-	g++ -o out/logistic_regression  logistic_regression.cpp
+	g++ -o out/logistic_regression  logistic_regression.cpp -I /usr/include/eigen3
 
 run: build
 	./out/logistic_regression
