--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ logs.txt
 .vscode/*
 *.exe
 *.pyc
+P3_Mojo/data/assets/
+
+P3_Mojo/data/lineal_regression/CPP/out/
+
+P3_Mojo/data/logistic_regression/CPP/out/logistic_regression
