--- a/P3_Mojo/Makefile
+++ b/P3_Mojo/Makefile
@@ -1,3 +1,3 @@
 AI_numpyC:
-	g++ AI\numpy_test.cpp -o AI\numpy_test
-	AI\numpy_test.exe
+	g++ AI\numpy_test.cpp -o out\numpy_test
+	out\numpy_test.exe
